[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["atlasatlas <68698872+westoleaboat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
